// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facet Layout API Tests PivotSheet Cell #getCellById() 1`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getCellChildrenNodes() 1`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getCells() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]cost",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getCells() 2`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getCellsByField() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getHeaderCells() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getHeaderCells() 2`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getHeaderNodes() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getHeaderNodes() 2`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet Cell #getHeaderNodes() for seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
  Object {
    "field": "",
    "id": "1",
    "value": "1",
  },
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColCells() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColLeafCells() 1`] = `
Array [
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColLeafNodes() 1`] = `
Array [
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColNodeById() 1`] = `
Object {
  "field": "$$extra$$",
  "id": "root[&]笔[&]cost",
  "value": "cost",
}
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColNodes() 2`] = `
Array [
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getColNodesByField() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]笔",
    "value": "笔",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell #getInitColLeafNodes() 1`] = `
Array [
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]price",
    "value": "price",
  },
  Object {
    "field": "$$extra$$",
    "id": "root[&]笔[&]cost",
    "value": "cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell Col Total Cell #getColGrandTotalsNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]总计",
    "value": "总计",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet ColCell Col Total Cell #getColTotalsNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]总计",
    "value": "总计",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet CornerCell #getCornerCells() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet CornerCell #getCornerCells() for seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet CornerCell #getCornerNodes() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet CornerCell #getCornerNodes() for seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "field": "province",
    "id": "province",
    "value": "province",
  },
  Object {
    "field": "city",
    "id": "city",
    "value": "city",
  },
  Object {
    "field": "type",
    "id": "type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet DataCell #getDataCells() 1`] = `
Array [
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]cost",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet DataCell #getDataCells() for show seriesNumber enable 1`] = `
Array [
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]price",
  },
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]cost",
  },
  Object {
    "id": "root[&]浙江[&]杭州-root[&]笔[&]cost",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet MergedCell #getMergedCells() 1`] = `
Array [
  Object {
    "id": "root[&]浙江[&]义乌-root[&]笔[&]price",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowCells() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowLeafCells() 1`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowLeafNodes() 1`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowNodeById() 1`] = `
Object {
  "field": "city",
  "id": "root[&]浙江[&]杭州",
  "value": "杭州",
}
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowNodes() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "root[&]浙江",
    "value": "浙江",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowNodes() 2`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell #getRowNodesByField() 1`] = `
Array [
  Object {
    "field": "city",
    "id": "root[&]浙江[&]义乌",
    "value": "义乌",
  },
  Object {
    "field": "city",
    "id": "root[&]浙江[&]杭州",
    "value": "杭州",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell Row Total Cell #getRowGrandTotalsNodes() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "root[&]总计",
    "value": "总计",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet RowCell Row Total Cell #getRowTotalsNodes() 1`] = `
Array [
  Object {
    "field": "province",
    "id": "root[&]总计",
    "value": "总计",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet SeriesNumberCell #getSeriesNumberCells() for seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "1",
    "value": "1",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet SeriesNumberCell #getSeriesNumberNodes() for seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "1",
    "value": "1",
  },
]
`;

exports[`Facet Layout API Tests PivotSheet SeriesNumberCell #getSeriesNumberNodes(): Array [] 1`] = `Array []`;

exports[`Facet Layout API Tests TableSheet Cell #getCellById() 1`] = `
Array [
  Object {},
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getCells() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
  Object {
    "id": "0-root[&]type",
  },
  Object {
    "id": "1-root[&]type",
  },
  Object {
    "id": "2-root[&]type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getCells() for show seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "id": "0-root[&]$$series_number$$",
  },
  Object {
    "id": "1-root[&]$$series_number$$",
  },
  Object {
    "id": "2-root[&]$$series_number$$",
  },
  Object {
    "field": "$$series_number$$",
    "id": "root[&]$$series_number$$",
    "value": "序号",
  },
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
  Object {
    "id": "0-root[&]$$series_number$$",
  },
  Object {
    "id": "1-root[&]$$series_number$$",
  },
  Object {
    "id": "2-root[&]$$series_number$$",
  },
  Object {
    "id": "0-root[&]type",
  },
  Object {
    "id": "1-root[&]type",
  },
  Object {
    "id": "2-root[&]type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getCellsByField() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getHeaderCells() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getHeaderCells() for show seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "id": "0-root[&]$$series_number$$",
  },
  Object {
    "id": "1-root[&]$$series_number$$",
  },
  Object {
    "id": "2-root[&]$$series_number$$",
  },
  Object {
    "field": "$$series_number$$",
    "id": "root[&]$$series_number$$",
    "value": "序号",
  },
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getHeaderNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet Cell #getHeaderNodes() for show seriesNumber enable 1`] = `
Array [
  Object {
    "field": "",
    "id": "",
    "value": "序号",
  },
  Object {
    "field": "$$series_number$$",
    "id": "root[&]$$series_number$$",
    "value": "序号",
  },
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColCells() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColLeafCells() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColLeafNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColNodes() for show seriesNumber enable 1`] = `
Array [
  Object {
    "field": "$$series_number$$",
    "id": "root[&]$$series_number$$",
    "value": "序号",
  },
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getColNodesByField() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet ColCell #getInitColLeafNodes() 1`] = `
Array [
  Object {
    "field": "type",
    "id": "root[&]type",
    "value": "type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet DataCell #getDataCells() 1`] = `
Array [
  Object {
    "id": "0-root[&]type",
  },
  Object {
    "id": "1-root[&]type",
  },
  Object {
    "id": "2-root[&]type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet DataCell #getDataCells() for show seriesNumber enable 1`] = `
Array [
  Object {
    "id": "0-root[&]$$series_number$$",
  },
  Object {
    "id": "1-root[&]$$series_number$$",
  },
  Object {
    "id": "2-root[&]$$series_number$$",
  },
  Object {
    "id": "0-root[&]type",
  },
  Object {
    "id": "1-root[&]type",
  },
  Object {
    "id": "2-root[&]type",
  },
]
`;

exports[`Facet Layout API Tests TableSheet SeriesNumberCell #getSeriesNumberCells() 1`] = `
Array [
  Object {
    "id": "0-root[&]$$series_number$$",
  },
  Object {
    "id": "1-root[&]$$series_number$$",
  },
  Object {
    "id": "2-root[&]$$series_number$$",
  },
]
`;
